change button on index

--- a/final/index.html
+++ b/final/index.html
@@ -100,7 +100,7 @@
 							is quite unlike its neighbor. To make your experience unforgateable we have <strong> GoScoots</strong> to
 							help you enjoy wonderfull momments around the island.
 						</p>
-						<a href="/final/reservations.html"><button>Booking Now</button></a>
+						<a href="/final/reservations.html">Booking Now</a>
 					</div>
 				</div>
 			</section>
@@ -120,42 +120,42 @@
 					<img src="/final/assets/images/honda-dio.png" alt="honda-dio" />
 					<hr />
 					<h3 class="text">Honda Dio</h3>
-					<a href="/final/rentals.html"><button class="detailBtn">More Info</button></a>
+					<a href="/final/rentals.html" class="detailBtn">More Info</a>
 				</div>
 
 				<div class="honda-scoots">
 					<img src="/final/assets/images/honda-metro.png" alt="honda-metro" />
 					<hr />
 					<h3 class="text">Honda Metro</h3>
-					<a href="/final/rentals.html"><button class="detailBtn">More Info</button></a>
+					<a href="/final/rentals.html" class="detailBtn">More Info</a>
 				</div>
 
 				<div class="honda-scoots">
 					<img src="/final/assets/images/honda-pcx.png" alt="honda-pcx" />
 					<hr />
 					<h3 class="text">Honda PCX</h3>
-					<a href="/final/rentals.html"><button class="detailBtn">More Info</button></a>
+					<a href="/final/rentals.html" class="detailBtn">More Info</a>
 				</div>
 
 				<div class="honda-scoots">
 					<img src="/final/assets/images/honda-Pioneer.png" alt="honda-pioneer" />
 					<hr />
 					<h3 class="text">Honda Pioneer</h3>
-					<a href="/final/rentals.html"><button class="detailBtn">More Info</button></a>
+					<a href="/final/rentals.html" class="detailBtn">More Info</a>
 				</div>
 
 				<div class="honda-scoots">
 					<img src="/final/assets/images/2door.png" alt="jeep-2door" />
 					<hr />
 					<h3 class="text">2dr Jeep Wrangler</h3>
-					<a href="/final/rentals.html"><button class="detailBtn">More Info</button></a>
+					<a href="/final/rentals.html" class="detailBtn">More Info</a>
 				</div>
 
 				<div class="honda-scoots">
 					<img src="/final/assets/images/4door.png" alt="jeep-4door" />
 					<hr />
 					<h3 class="text">4dr Jeep Wrangler</h3>
-					<a href="/final/rentals.html"><button class="detailBtn">More Info</button></a>
+					<a href="/final/rentals.html" class="detailBtn">More Info</a>
 				</div>
 			</div>
 		</main>
