--- a/final/reservations.html
+++ b/final/reservations.html
@@ -42,6 +42,7 @@
 		<!-- SCRIPTS -->
 		<script src="/final/js/index.js" defer></script>
 		<script src="/final/js/range.js" defer></script>
+		<script src="/final/js/updated.js" defer></script>
 		<title>GoScoots</title>
 	</head>
 	<body>
