--- a/final/thanks.html
+++ b/final/thanks.html
@@ -41,6 +41,7 @@
 
 		<!-- SCRIPTS -->
 		<script src="/final/js/index.js" defer></script>
+		<script src="/final/js/updated.js" defer></script>
 		<title>GoScoots</title>
 	</head>
 	<body>
